<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        />
    <item
        android:id="@+id/nav_dzikirshlat"
        android:title="@string/dzikir_sholat"
        android:icon="@drawable/ic_doa"
        />
    <item
        android:id="@+id/nav_pagipetang"
        android:title="@string/dzikir_pagi_dan_petang"
        android:icon="@drawable/ic_pagi_petang"
        />
    <item android:id="@+id/nav_harian"
        android:title="@string/dzikir_harian"
        android:icon="@drawable/baseline_access_time_24"
        />
    <item
        android:id="@+id/nav_setiapsaat"
        android:title="@string/dzikir_setiap_saat"
        android:icon="@drawable/ic_dzikir"

        />
    <item android:title="Profile">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:title="Your Info"
                android:icon="@drawable/baseline_person_24"
                />
        </menu>
    </item>


</menu>